# backend/app/Models/User.php
@@ -56,6 +56,7 @@ class User extends Authenticatable implements MustVerifyEmail
         return [
             'email_verified_at' => 'datetime',
             'password' => 'hashed',
+            'profile_version' => 'integer',
         ];
     }
 }
